client build --prod

--- a/client/src/app/components/profile/profile.component.html
+++ b/client/src/app/components/profile/profile.component.html
@@ -27,7 +27,7 @@
           <div class="pb-3" *ngIf="progress>0"> 
             <ngb-progressbar class="progress-bar-striped" type="primary" [animated]="true" [striped]="true"  [value]="progress"></ngb-progressbar>
           </div>
-          <button class="btn btn-block btn-primary" (click)="edit ? updateProduct() : saveNewProduct()">
+          <button class="btn btn-block btn-primary" >
             Save
           </button>
         </form>
