--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -6,5 +6,5 @@
 <div class="card text-center">
     <h3>Instructions:</h3>
     <span>user: admin / password: 1234</span>
-    <spans>Create your Own User</spans>
+    <span>Create your Own User</span>
 </div>
