--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-    background: #660b0b;
+    background: #ffa4a4;
 }
 .form-signin {
     min-width: 400px;
