--- a/client/src/app/components/products-form/products-form.component.html
+++ b/client/src/app/components/products-form/products-form.component.html
@@ -3,19 +3,19 @@
     <div class="col">
       <div class="card">
         <input style="display: none;" type="file" class="custom-file-input" id="customFile" (change)="onFileChanged($event)" id="image" name="image" #fileInput>
-        <img class="w-100" [src]="product.image == '' ? '/assets/noimage.png' : product.image" name="image" (click)="fileInput.click()">
+        <img class="w-100" alt="/assets/noimage.png" [src]="!product.image ? '/assets/noimage.png' : product.image" name="image" (click)="fileInput.click()">
       </div>  
     </div>  
     <div class="col">
       <div class="card">
         <input style="display: none;" type="file" class="custom-file-input" id="customFile" (change)="onFileChanged($event)" id="image" name="image" #fileInput2>  
-        <img class="w-100" [src]="product.image2 == '' ? '/assets/noimage.png' : product.image2" name="image2" (click)="fileInput2.click()">
+        <img class="w-100" alt="/assets/noimage.png" [src]="! product.image2 ? '/assets/noimage.png' : product.image2" name="image2" (click)="fileInput2.click()">
       </div>  
     </div>  
     <div class="col">
       <div class="card">  
         <input style="display: none;" type="file" class="custom-file-input" id="customFile" (change)="onFileChanged($event)" id="image" name="image" #fileInput3>  
-        <img class="w-100" [src]="product.image3 == '' ? '/assets/noimage.png' : product.image3" name="image3" (click)="fileInput3.click()">
+        <img class="w-100" alt="/assets/noimage.png" [src]="!product.image3 ? '/assets/noimage.png' : product.image3" name="image3" (click)="fileInput3.click()">
       </div>  
     </div>  
   </div>  
@@ -47,55 +47,3 @@
     </div>
   </div>
 </div>
-<!-- <div class="col-6 row-8">
-  <ngb-carousel >
-    <ng-template ngbSlide>
-      <div class="picsum-img-wrapper">
-        <img class="col-6 row-12"  [src]="product.image == '' ? '/assets/noimage.png' : product.image" alt="Random first slide">
-      </div>
-    </ng-template>
-    <ng-template ngbSlide>
-      <div class="picsum-img-wrapper">
-        <img class="col-6 row-12" [src]="product.image2 == '' ? '/assets/noimage.png' : product.image2" alt="Random second slide">
-      </div>
-    </ng-template>
-    <ng-template ngbSlide>
-      <div class="picsum-img-wrapper">
-        <img class="col-6 row-12" [src]="product.image3 == '' ? '/assets/noimage.png' : product.image3" alt="Random third slide">
-      </div>
-    </ng-template>
-  </ngb-carousel>
-</div> -->
-<!-- <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img [src]="product.image == '' ? '/assets/noimage.png' : product.image" class="d-block w-100">
-    </div>
-    <div class="carousel-item">
-      <img [src]="product.image2 == '' ? '/assets/noimage.png' : product.image" class="d-block w-100">
-    </div>
-    <div class="carousel-item">
-      <img [src]="product.image3 == '' ? '/assets/noimage.png' : product.image" class="d-block w-100">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div> -->
-<!-- <div class="row-md-2">
-  <div class="card card-body text-center">
-    <h3>{{product.title == '' ? 'Product Title' : product.title}}</h3>
-    <p>{{product.description == '' ? 'Write your Descrition' : product.description}}</p>
-    <img [src]="product.image == '' ? '/assets/noimage.png' : product.image" alt="No Image" class="card-img-top">
-    <img [src]="product.image2 == '' ? '/assets/noimage.png' : product.image2" alt="No Image" class="card-img-top">
-    <img [src]="product.image3 == '' ? '/assets/noimage.png' : product.image3" alt="No Image" class="card-img-top">
-    <p>{{product.created_at | date: 'yyyy-MM-dd'}}</p>
-    <p><i class="fab fa-whatsapp"></i>{{product.whapp == '' ? '$?' : product.whapp}}</p>
-    <p>${{product.price == '' ? '?' : product.price}}</p>
-  </div>
-</div> -->
