--- a/client/src/app/components/products-form/products-form.component.html
+++ b/client/src/app/components/products-form/products-form.component.html
@@ -23,7 +23,7 @@
 <div class="col-12 row-5">
   <div class="card  bg-secondary mb-3">    
     <div class="card-header">
-      <h4 class=" mt-0 mb-0">ADD NEW PRODUCT</h4>
+      <h4 class=" mt-0 mb-0">AGREGAR PRODUCTO</h4>
     </div>
     <div class="card-body">
       <form action="">
