--- a/client/src/app/components/products-list/products-list.component.html
+++ b/client/src/app/components/products-list/products-list.component.html
@@ -13,9 +13,9 @@
       <h3 class="">${{product.price}}</h3>
       <!-- <p><i class="fab fa-whatsapp"></i>{{product.whapp}}</p> -->
       <a [routerLink]="['/products/edit', product.id]" class="btn btn-primary btn-block">
-        EDIT PRODUCT
+        EDITAR PRODUCTO
       </a>
-      <button class="btn btn-danger btn-block" (click)="deleteGame(product.id)">delete<i class="ml-1 far fa-trash-alt"></i>
+      <button class="btn btn-danger btn-block" (click)="deleteGame(product.id)">BORRAR PRODUCTO<i class="ml-1 far fa-trash-alt"></i>
       </button>
     </div>
   </div>
