--- a/client/src/app/components/login/login.component.html
+++ b/client/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="text-center">
     <img class="mb-4" src="assets/icon.png" alt="" width="72" height="72">
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+    <h1 class="h3 mb-3 font-weight-normal">Acceder</h1>
     <form (submit)="submit(this)">
         <div class="form-group">
             <input type="text" [(ngModel)]="user.username" name="username" class="form-control" placeholder="Username" required autofocus>
@@ -8,7 +8,7 @@
             <button type="submit" class="btn btn-primary btn-block">submit</button>
         </div>
         <label>
-            <input type="checkbox" value="remember-me"> Remember me
+            <input type="checkbox" value="remember-me"> Recuerdame!
         </label>
     </form>
 </div>
