--- a/client/src/app/components/profile/profile.component.html
+++ b/client/src/app/components/profile/profile.component.html
@@ -1,7 +1,7 @@
 <div class="col-12 row-5">
     <div class="card text-white bg-danger mb-3">    
       <div class="card-header">
-        <h4 class="text-white mt-0 mb-0">YOUR PROFILE</h4>
+        <h4 class="text-white mt-0 mb-0">TU PERFIL</h4>
         <h6 class="text-white mt-0 mb-0">no anda todavia</h6>
       </div>
       <div class="card-body">
