nav bar fixed-top

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,14 @@
 <app-navigation></app-navigation>
-<div class="text-center p-2"><h4 class="text-white mb-0"><b>Avellaneda Compras</b></h4></div>
 <div class="container">
+    <div class="text-center p-2">
+        <h4 class="text-white mb-0">
+            <b>Avellaneda Compras</b>
+        </h4>
+    </div>
     <router-outlet></router-outlet>
 </div>
+<footer class="page-footer font-small red pt-4">
+<div class="footer-copyright text-center py-3 bg-danger text-white">
+       <p> <small>© 2020 Copyright: Todos los derechos reservados por <a href="http://avellanedacompras.com">Avellanedacompras.com</a></small></p>
+    </div>
+</footer>
