--- a/client/src/app/components/navigation/navigation.component.html
+++ b/client/src/app/components/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-dark navbar-fixed-top">
+<nav class="navbar navbar-dark bg-dark fixed-top" [class.sticky] = "sticky">
   <a class="navbar-brand" routerLink="/"><img class="nav-section" src="assets/icon.png" alt="" width="32" height="32">
   </a>        
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="true" aria-label="Toggle navigation" (click)="isMenuCollapsed = !isMenuCollapsed">
@@ -7,10 +7,10 @@
   <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav nav-section">
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/products" routerLinkActive="active"><i class="fas fa-tshirt"></i> Products</a>
+        <a class="nav-link" routerLink="/products" routerLinkActive="active"><i class="fas fa-tshirt"></i> Productos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/products/add" routerLinkActive="active"><i class="fas fa-plus-circle"></i>Add product</a>
+        <a class="nav-link" routerLink="/products/add" routerLinkActive="active"><i class="fas fa-plus-circle"></i>Agregar Producto</a>
       </li>
     </ul>
     <ul class="navbar-nav ml-auto">
