fixed pos navbar footer

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -7,8 +7,10 @@
     </div>
     <router-outlet></router-outlet>
 </div>
-<footer class="page-footer font-small red pt-4">
-<div class="footer-copyright text-center py-3 bg-danger text-white">
-       <p> <small>© 2020 Copyright: Todos los derechos reservados por <a href="http://avellanedacompras.com">Avellanedacompras.com</a></small></p>
+<footer class="footer fixed-bottom font-small red pt-4">
+    <div class="">
+        <div class="footer-copyright text-center py-3 bg-danger text-white">
+            <p> <small>© 2020 Copyright: Todos los derechos reservados por <a href="http://avellanedacompras.com">Avellanedacompras.com</a></small></p>
+        </div>
     </div>
 </footer>
