--- a/client/src/app/components/navigation/navigation.component.html
+++ b/client/src/app/components/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-dark fixed-top" [class.sticky] = "sticky">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
   <a class="navbar-brand" routerLink="/"><img class="nav-section" src="assets/icon.png" alt="" width="32" height="32">
   </a>        
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="true" aria-label="Toggle navigation" (click)="isMenuCollapsed = !isMenuCollapsed">
