--- a/client/src/app/components/products-form/products-form.component.html
+++ b/client/src/app/components/products-form/products-form.component.html
@@ -8,13 +8,13 @@
     </div>  
     <div class="col">
       <div class="card">
-        <input style="display: none;" type="file" class="custom-file-input" id="customFile" (change)="onFileChanged($event)" id="image" name="image" #fileInput2>  
+        <input style="display: none;" type="file" class="custom-file-input" id="customFile" (change)="onFileChanged($event)" id="image2" name="image2" #fileInput2>  
         <img class="w-100" alt="/assets/noimage.png" [src]="! product.image2 ? '/assets/noimage.png' : product.image2" name="image2" (click)="fileInput2.click()">
       </div>  
     </div>  
     <div class="col">
       <div class="card">  
-        <input style="display: none;" type="file" class="custom-file-input" id="customFile" (change)="onFileChanged($event)" id="image" name="image" #fileInput3>  
+        <input style="display: none;" type="file" class="custom-file-input" id="customFile" (change)="onFileChanged($event)" id="image2" name="image2" #fileInput3>  
         <img class="w-100" alt="/assets/noimage.png" [src]="!product.image3 ? '/assets/noimage.png' : product.image3" name="image3" (click)="fileInput3.click()">
       </div>  
     </div>  
