--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -7,9 +7,9 @@
     </div>
     <router-outlet></router-outlet>
 </div>
-<footer class="footer fixed-bottom font-small red pt-4">
+<footer class="footer fixed-bottom font-small red">
     <div class="">
-        <div class="footer-copyright text-center py-3 bg-danger text-white">
+        <div class="footer-copyright text-center bg-danger text-white">
             <p> <small>© 2020 Copyright: Todos los derechos reservados por <a href="http://avellanedacompras.com">Avellanedacompras.com</a></small></p>
         </div>
     </div>
