--- a/client/src/app/components/products-form/products-form.component.html
+++ b/client/src/app/components/products-form/products-form.component.html
@@ -32,17 +32,15 @@
           <div class="pb-3" *ngIf="progress>0"> 
             <ngb-progressbar class="progress-bar-striped" type="primary" [animated]="true" [striped]="true"  [value]="progress"></ngb-progressbar>
           </div>
-          <input type="text" name="title" [(ngModel)]="product.title" placeholder="Title" class="form-control" autofocus>
+          <input type="text" name="title" [(ngModel)]="product.title" placeholder="Producto" class="form-control" autofocus>
         </div>
         <div class="form-group">
-          <textarea name="description" [(ngModel)]="product.description" rows="2" placeholder="Description" class="form-control"></textarea>
+          <textarea name="description" [(ngModel)]="product.description" rows="2" placeholder="Descripcion" class="form-control"></textarea>
         </div>
         <div class="form-group">
-          <input type="text" name="Price" [(ngModel)]="product.price" placeholder="Price" class="form-control" autofocus>
+          <input type="text" name="Price" [(ngModel)]="product.price" placeholder="Precio" class="form-control" autofocus>
         </div>
-        <button class="btn btn-block btn-success" (click)="edit ? updateProduct() : saveNewProduct()">
-          Save
-        </button>
+        <button class="btn btn-block btn-success" (click)="edit ? updateProduct() : saveNewProduct()">Guardar</button>
       </form>
     </div>
   </div>
