product list lang

--- a/client/src/app/components/products-list/products-list.component.html
+++ b/client/src/app/components/products-list/products-list.component.html
@@ -2,7 +2,7 @@
   <div class="card bg-secondary mb-3">
     <div class="card-header">
       <h4 class=" mt-0 mb-0">{{product.title}}</h4>
-      <h6 class=" mt-0 mb-0">{{product.description == ''?'Description':product.description}}</h6>
+      <h6 class=" mt-0 mb-0">{{product.description == ''?'Descripcion':product.description}}</h6>
     </div>
     <div class="card bg-transparent p-4" style="overflow: hidden; max-height: 250px; width: 100%;border:1px">
       <div class="card">
