ascync drop down categories

--- a/client/src/app/components/products-form/products-form.component.html
+++ b/client/src/app/components/products-form/products-form.component.html
@@ -40,6 +40,16 @@
         <div class="form-group">
           <input type="text" name="Price" [(ngModel)]="product.price" placeholder="Precio" class="form-control" autofocus>
         </div>
+        <div class="mb-2">
+          <select (change)="changeCountry($event.target.value)">
+              <option *ngFor ="let cat of catList" value={{cat.id}} >{{cat.nombre}} </option>
+          </select>
+        </div>
+        <div class="mb-2">
+          <select >
+              <option *ngFor ="let subcat of subcatList">{{subcat.nombre}} </option>
+          </select>
+        </div>
         <button class="btn btn-block btn-success" (click)="edit ? updateProduct() : saveNewProduct()">Guardar</button>
       </form>
     </div>
