--- a/client/src/app/components/products-form/products-form.component.html
+++ b/client/src/app/components/products-form/products-form.component.html
@@ -41,13 +41,13 @@
           <input type="text" name="Price" [(ngModel)]="product.price" placeholder="Precio" class="form-control" autofocus>
         </div>
         <div class="mb-2">
-          <select (change)="changeCountry($event.target.value)">
-              <option *ngFor ="let cat of catList" value={{cat.id}} >{{cat.nombre}} </option>
+          <select (change)="changeCountry($event.target.value)" [(ngModel)]="product.category" name="category">
+              <option *ngFor ="let cat of catList" [value]="cat.id">{{cat.nombre}}</option>
           </select>
         </div>
         <div class="mb-2">
-          <select >
-              <option *ngFor ="let subcat of subcatList">{{subcat.nombre}} </option>
+          <select [(ngModel)]="product.subcategory" name="subcategory">
+              <option *ngFor ="let subcat of subcatList" [value]="subcat.id">{{subcat.nombre}} </option>
           </select>
         </div>
         <button class="btn btn-block btn-success" (click)="edit ? updateProduct() : saveNewProduct()">Guardar</button>
