--- a/client/src/app/components/products-list/products-list.component.html
+++ b/client/src/app/components/products-list/products-list.component.html
@@ -2,7 +2,7 @@
   <div class="card bg-secondary mb-3">
     <div class="card-header">
       <h4 class=" mt-0 mb-0">{{product.title}}</h4>
-      <h6 class="mt-0 mb-0">{{product.catTitle}}</h6>
+      <h6 class="mt-0 mb-0">{{getCatTitle(product.category)}}</h6>
     </div>
     <div class="card bg-transparent p-4" style="overflow: hidden; max-height: 250px; width: 100%;border:1px">
       <div class="card">
@@ -10,7 +10,7 @@
       </div>
     </div>
     <div class="card-body">
-      <h6 class="mt-0 mb-0">{{product.subcatTitle}} </h6>
+      <h6 class="mt-0 mb-0">{{getCatTitle(product.subcategory)}} </h6>
       <h3>${{product.price}}</h3>
       <h6 class="text-success" *ngIf="product.enable">Activo</h6>
       <h6 class="text-danger" *ngIf="!product.enable">Inactivo</h6>
@@ -18,8 +18,8 @@
       <a [routerLink]="['/products/edit', product.id]" class="btn btn-primary btn-block">
         EDITAR PRODUCTO
       </a>
-      <button *ngIf="product.enable" class="btn btn-danger btn-block" (click)="deleteGame(product.id)">DESACTIVAR PRODUCTO</button>
-      <button *ngIf="!product.enable" class="btn btn-success btn-block" (click)="deleteGame(product.id)">ACTIVAR PRODUCTO</button>
+      <button *ngIf="product.enable" class="btn btn-danger btn-block" (click)="disableProduct(product)">DESACTIVAR PRODUCTO</button>
+      <button *ngIf="!product.enable" class="btn btn-success btn-block" (click)="enableProduct(product)">ACTIVAR PRODUCTO</button>
     </div>
   </div>
 </div>
