lil css changes

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,9 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-    /* background: #ffa4a4; */
-    background: rgb(225,206,221);
+    background-color: #e5e5f7;
+    background: radial-gradient(circle, transparent 20%, #e5e5f7 20%, #e5e5f7 80%, transparent 80%, transparent), radial-gradient(circle, transparent 20%, #e5e5f7 20%, #e5e5f7 80%, transparent 80%, transparent) 10px 10px, linear-gradient(#9779b5 0.8px, transparent 0.8px) 0 -0.4px, linear-gradient(90deg, #9779b5 0.8px, #e5e5f7 0.8px) -0.4px 0;
+    background-size: 20px 20px, 20px 20px, 10px 10px, 10px 10px;
 }
-
 .form-signin {
     min-width: 400px;
     display: inline-block;
